# go-api/internal/routes/routes.go
@@ -11,5 +11,7 @@ func RegisterRoutes(r *gin.Engine, projectHandler *handlers.ProjectHandler) {
 	{
 		api.POST("/projects", projectHandler.AddProject)
 		api.GET("/projects", projectHandler.GetProjects)
+		api.GET("/projects/:id", projectHandler.GetProjectByID)
+		api.PUT("/projects/:id", projectHandler.UpdateProject)
 	}
 }
